# RtoJ-anki-register

./: LICENSE  README.md  RtoJ-anki-register.py  pyproject.toml  wordlist.txt
app/: RtoJ-anki-register.py
